--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie": "^0.4.1",
     "moment": "^2.29.1",
     "next": "11.0.1",
+    "nprogress": "^0.2.0",
     "qs": "^6.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
